[gd_scene load_steps=5 format=3 uid="uid://6rbtfm1dclut"]

[ext_resource type="Script" uid="uid://bya2idonyr4pr" path="res://lobby_fenster.gd" id="1_t2jh2"]
[ext_resource type="Script" uid="uid://iw7uceqaxakv" path="res://main.gd" id="2_bbjqm"]
[ext_resource type="Texture2D" uid="uid://dkgswvhlwdckc" path="res://images.jpeg" id="3_4ty2a"]
[ext_resource type="Script" uid="uid://iry6tmtj4tx3" path="res://server.gd" id="4_rckqj"]

[node name="RootScene" type="Node"]

[node name="LobbyFenster" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t2jh2")

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyFenster"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = -77.5
offset_right = 135.5
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LobbyFenster/VBoxContainer"]
layout_mode = 2

[node name="ServerIPLabel" type="Label" parent="LobbyFenster/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ServerIPInput" type="LineEdit" parent="LobbyFenster/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "IP Adresse"
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="LobbyFenster/VBoxContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="LobbyFenster/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="PlayerNameInput" type="LineEdit" parent="LobbyFenster/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="HBoxContainer3" type="HBoxContainer" parent="LobbyFenster/VBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="LobbyFenster/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect"

[node name="StartButton" type="Button" parent="LobbyFenster/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="StatusLabel" type="Label" parent="LobbyFenster/VBoxContainer"]
layout_mode = 2

[node name="LobbyList" type="VBoxContainer" parent="LobbyFenster/VBoxContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="LobbyFenster/VBoxContainer/LobbyList"]
layout_mode = 2

[node name="Main" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_bbjqm")

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -58.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer"]
layout_mode = 2

[node name="WordRow" type="HBoxContainer" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Wordinput" type="LineEdit" parent="Main/MarginContainer/VBoxContainer/WordRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Wort Eingeben"

[node name="CheckButton" type="Button" parent="Main/MarginContainer/VBoxContainer/WordRow"]
layout_mode = 2
text = "Pr√ºfen
"

[node name="ResultLabel" type="Label" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer2"]
layout_mode = 2

[node name="Titel" type="Label" parent="Main/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SchellenParty"

[node name="CanvasLayer" type="CanvasLayer" parent="Main"]
visible = false

[node name="TextureRect" type="TextureRect" parent="Main/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.75
offset_top = -46.75
offset_right = 48.75
offset_bottom = 46.75
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4ty2a")
expand_mode = 1

[node name="Server" type="Node" parent="."]
script = ExtResource("4_rckqj")
